minikube/03-mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: projectname
  labels:
    env: dev
spec:
  ports:
    - port: 3306
  selector:
    env: dev
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-mysql
  namespace: projectname
  labels:
    env: dev
spec:
  selector:
    matchLabels:
      env: dev
      tier: mysql
  replicas: 1
  template:
    metadata:
      labels:
        env: dev
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
