minikube/04-wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: projectname
  labels:
    env: dev
spec:
  ports:
    - port: 80
  selector:
    env: dev
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: projectname
  labels:
    env: dev
spec:
  selector:
    matchLabels:
      env: dev
      tier: frontend
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        env: dev
        tier: frontend
    spec:
      containers:
        - image: wordpress:php8.2-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pv-claim
